--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
 		 	phone- +880 1*********<br></p>
 	<hr>	 	
 <!--Contact Form-->
-	<h1 style="color:#9900ff;"><b>INTERSTED IN MASSAGING?</b></h1>
+	<fieldset><h1 style="color:#9900ff;"><b>INTERSTED IN MASSAGING?</b></h1>
 	<form action="mailto:mztrading66@gmail.com" method="post" enctype="text/plain">
 		<label style="color:#ff704d;font-size:20px;">Name:</label><br>
 		<input type="text" name="Frist Name" placeholder="Enter your full name"><br>
@@ -45,7 +45,7 @@
         <button type="reset" style="background-color:#ff3300">Reset</button>
 
 
-
+	</fieldset>
 	</form>
 
 
