--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
  <head>
   <meta charset="UTF-8">
-  <title>MZ Trazing</title>  
+  <title>MZ Trading</title>  
   <style>
   	body{background-color:#1f1f14}
   </style>
