--- a/contact.html
+++ b/contact.html
@@ -39,6 +39,8 @@
 		<input type="text" name="E-mail" placeholder="Enter your email address"><br>
 		<label style="color:#ff704d;font-size:20px;">Phone:</label><br>
 		<input type="text" name="Phone Number" placeholder="Enter your phone number"><br>
+		<label style="color:#ff704d;font-size:20px;">Date  of  Birth:</label><br>
+		<input type="Date" name="Birthday" placeholder="dd/mm/yyyy"><br>
 		<label style="color:#ff704d;font-size:20px;">Massage:</label><br>
 		<textarea type="text" name="Massage" rows="5" cols="45" placeholder="Enter Massage..."></textarea><br>
 		<button type="submit" style="background-color:#00cc00">Send your message</button>
